[package]
name = "nabs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
ignore = "0.4.23"
log = "0.4.27"
petgraph = {version = "0.8.1", features=["std", "graphmap"]}
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
